<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        tools:context=".subactivities.PortraitsActivity">

        <View
            android:id="@+id/view4"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/stix_two_text"
            android:text="@string/name_year"
            android:textColor="#463356"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image4"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="103dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/stix_two_text"
            android:gravity="end"
            android:text="@string/nationalGallery"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#463356"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/stix_two_text"
            android:text="@string/portraits_btn"
            android:textAlignment="center"
            android:textColor="#463356"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="58dp"
            android:layout_height="53dp"
            android:layout_marginTop="28dp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/portraitslogo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="323dp"
            android:layout_height="94dp"
            android:fontFamily="@font/stix_two_text"
            android:text="@string/portraitsquote"
            android:textAlignment="center"
            android:textColor="#463356"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/portraits1" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image1"
            app:srcCompat="@drawable/portraits2" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image2"
            app:srcCompat="@drawable/portraits3" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image3"
            app:layout_constraintVertical_bias="0.049"
            app:srcCompat="@drawable/portraits4" />

        <TextView
            android:id="@+id/desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#463356"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image1"
            app:layout_constraintEnd_toEndOf="@+id/image1"
            app:layout_constraintStart_toStartOf="@+id/image1"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#463356"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image2"
            app:layout_constraintEnd_toEndOf="@+id/image2"
            app:layout_constraintStart_toStartOf="@+id/image2"
            app:layout_constraintTop_toTopOf="@+id/image2" />

        <TextView
            android:id="@+id/desc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#463356"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image3"
            app:layout_constraintEnd_toEndOf="@+id/image3"
            app:layout_constraintStart_toStartOf="@+id/image3"
            app:layout_constraintTop_toTopOf="@+id/image3" />

        <TextView
            android:id="@+id/desc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#463356"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image4"
            app:layout_constraintEnd_toEndOf="@+id/image4"
            app:layout_constraintStart_toStartOf="@+id/image4"
            app:layout_constraintTop_toTopOf="@+id/image4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>