<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".SubActivities.FasianosActivity">

        <View
            android:id="@+id/view6"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.684" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/stix_two_text"
            android:text="@string/name_year"
            android:textColor="#596D92"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/view6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image4"
            app:layout_constraintVertical_bias="0.37"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="103dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="159dp"
            android:fontFamily="@font/stix_two_text"
            android:gravity="end"
            android:text="@string/nationalGallery"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#2A4577"
            android:textColorHighlight="#2A4577"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@+id/image1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/stix_two_text"
            android:text="@string/fasianos_btn"
            android:textColor="#2A4577"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_marginTop="28dp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fasianoslogo"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="328dp"
            android:layout_height="69dp"
            android:fontFamily="@font/stix_two_text"
            android:text="@string/fasianosquote"
            android:textAlignment="center"
            android:textColor="#2A4577"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image1"
            />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image2"
            />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image3"
            />

        <TextView
            android:id="@+id/desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#2A4577"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image1"
            app:layout_constraintEnd_toEndOf="@+id/image1"
            app:layout_constraintStart_toStartOf="@+id/image1"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#2A4577"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image2"
            app:layout_constraintEnd_toEndOf="@+id/image2"
            app:layout_constraintStart_toStartOf="@+id/image2"
            app:layout_constraintTop_toTopOf="@+id/image2" />

        <TextView
            android:id="@+id/desc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#2A4577"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image3"
            app:layout_constraintEnd_toEndOf="@+id/image3"
            app:layout_constraintStart_toStartOf="@+id/image3"
            app:layout_constraintTop_toTopOf="@+id/image3" />

        <TextView
            android:id="@+id/desc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#2A4577"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image4"
            app:layout_constraintEnd_toEndOf="@+id/image4"
            app:layout_constraintStart_toStartOf="@+id/image4"
            app:layout_constraintTop_toTopOf="@+id/image4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>