<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        tools:context=".GkikasActivity">

        <View
            android:id="@+id/view6"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/stix_two_text"
            android:text="@string/name_year"
            android:textColor="#742A2A"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/view6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image5"
            app:layout_constraintVertical_bias="0.477"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="103dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="159dp"
            android:fontFamily="@font/stix_two_text"
            android:gravity="end"
            android:text="@string/nationalGallery"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#742A2A"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@+id/image1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/stix_two_text"
            android:text="@string/gkikas_btn"
            android:textAlignment="center"
            android:textColor="#742A2A"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="58dp"
            android:layout_height="53dp"
            android:layout_marginTop="28dp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gkikaslogo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="300dp"
            android:layout_height="29dp"
            android:fontFamily="@font/stix_two_text"
            android:text="@string/gkikasquote"
            android:textColor="#742A2A"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="317dp"
            android:layout_height="332dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/gkikas1" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="316dp"
            android:layout_height="313dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image1"
            app:srcCompat="@drawable/gkikas2" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="314dp"
            android:layout_height="286dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image2"
            app:srcCompat="@drawable/gkikas3" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="310dp"
            android:layout_height="275dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image3"
            app:srcCompat="@drawable/gkikas4" />

        <ImageView
            android:id="@+id/image5"
            android:layout_width="309dp"
            android:layout_height="274dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image4"
            app:srcCompat="@drawable/gkikas5" />

        <TextView
            android:id="@+id/gkikas1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#742A2A"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image1"
            app:layout_constraintEnd_toEndOf="@+id/image1"
            app:layout_constraintStart_toStartOf="@+id/image1"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/gkikas2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#742A2A"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image2"
            app:layout_constraintEnd_toEndOf="@+id/image2"
            app:layout_constraintStart_toStartOf="@+id/image2"
            app:layout_constraintTop_toTopOf="@+id/image2" />

        <TextView
            android:id="@+id/gkikas3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#742A2A"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image3"
            app:layout_constraintEnd_toEndOf="@+id/image3"
            app:layout_constraintStart_toStartOf="@+id/image3"
            app:layout_constraintTop_toTopOf="@+id/image3" />

        <TextView
            android:id="@+id/gkikas4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#742A2A"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image4"
            app:layout_constraintEnd_toEndOf="@+id/image4"
            app:layout_constraintStart_toStartOf="@+id/image4"
            app:layout_constraintTop_toTopOf="@+id/image4" />

        <TextView
            android:id="@+id/gkikas5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text"
            android:textAlignment="center"
            android:textColor="#742A2A"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/image5"
            app:layout_constraintEnd_toEndOf="@+id/image5"
            app:layout_constraintStart_toStartOf="@+id/image5"
            app:layout_constraintTop_toTopOf="@+id/image5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>